# BuildACPServer

./: Dockerfile  acpserver.py  agent.yaml  beeai-provider.yaml  client.py  pyproject.toml
acpserver/: main.py  server.py
src/acpserver/: agent.py  server.py
