[project]
name = "acpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beeai-sdk==0.0.21",
    "smolagents[litellm]==1.11.0",
]

[project.scripts]
server = "acpserver.server:server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"